--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h3>Web Designer</h3>
                 </div>
                 <div class="profession" style="--i:3;">
-                    <i class='bx bx-bar-chart-alt'></i>
+                    <i class='bx bxs-pencil'></i>
                     <h3>Consultant</h3>
                 </div>
 
