--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <div class="social-media">
                 <a href="https://www.facebook.com/profile.php?id=100010201902060&mibextid=LQQJ4d"><i class='bx bxl-facebook'></i></a>
-                <!-- <a href="#"><i class='bx bxl-twitter'></i></a> -->
+                <a href="https://twitter.com/ahmedab7694294"><i class='bx bxl-twitter'></i></a>
                 <a href="https://www.instagram.com/ahmed_abdullah001/?igsh=M2szcGpkcGQ1dXdh&utm_source=qr"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="https://www.linkedin.com/in/ahmed-abdullah-40b734283"><i class='bx bxl-linkedin'></i></a>
             </div>
@@ -130,7 +130,7 @@
                 <!-- <a href="#" class="btn">Read More</a> -->
             </div>
             <div class="services-box">
-                <i class='bx bx-bar-chart-alt'></i>
+                <i class='bx bxl-figma  '></i>
                 <h3>Figma Creation & Collaboration</h3>
                 <p>Collaborate seamlessly with Figma for design creation. Your ideas brought to life through a platform focused on effective collaboration and prototyping.</p>
                 <!-- <a href="#" class="btn">Read More</a> -->
@@ -142,7 +142,7 @@
                 <!-- <a href="#" class="btn">Read More</a> -->
             </div>
             <div class="services-box">
-                <i class='bx bx-bar-chart-alt'></i>
+                <i class='bx bx-support'></i>
                 <h3>Remote Support & Maintenance</h3>
                 <p>Ensure digital health with dedicated remote support. Wherever you are, comprehensive services keep your websites and applications running smoothly.</p>
                 <!-- <a href="#" class="btn">Read More</a> -->
