--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <!-- <a href="#" class="btn">Read More</a> -->
             </div>
             <div class="services-box">
-                <i class='bx bx-bar-chart-alt'></i>
+                <i class='bx bx-palette'></i>
                 <h3>Logo & Graphic Design</h3>
                 <p>Make a mark with distinctive logos and compelling graphics. Visual identities that resonate, leaving a memorable impression on your audience.</p>
                 <!-- <a href="#" class="btn">Read More</a> -->
