--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <!-- <a href="#" class="btn">Read More</a> -->
             </div>
             <div class="services-box">
-                <i class='bx bx-bar-chart-alt'></i>
+                <i class='bx bx-palette'></i>
                 <h3>Problem Solving through Code</h3>
                 <p>Encounter challenges; let's find solutions. Analyzing issues in your digital landscape and implementing efficient, code-based solutions for business advancement.</p>
                 <!-- <a href="#" class="btn">Read More</a> -->
