--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!-- about section design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="imgs/profile.jpg" alt="">
+            <img src="imgs/profile 2.jpg" alt="">
         </div>
 
         <div class="about-content">
@@ -173,16 +173,16 @@
                     <a href="https://ahmed001abdullah.github.io/Weather-page/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
-            <!-- <div class="portfolio-box">
-                <img src="imgs/profile.jpg" alt="">
+            <div class="portfolio-box">
+                <img src="imgs\Movie ss.png" alt="">
 
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <h4>Movie App</h4>
+                    <p>Browse Movie and Get their Description of the movie.</p>
+                    <a href="https://ahmed001abdullah.github.io/Movie-app/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
-            <div class="portfolio-box">
+            <!-- <div class="portfolio-box">
                 <img src="imgs/profile.jpg" alt="">
 
                 <div class="portfolio-layer">
