--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!-- about section design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="imgs/profile 2.jpg" alt="">
+            <img src="imgs/Profile 2.jpg" alt="">
         </div>
 
         <div class="about-content">
