new project add

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ahmed Abdullah Portfolio</title>
+
+    
     
     <!--email link-->
     <link rel="preload" href="https://formspree.io/static/img/loading.svg?t=1703949270" as="image" />
@@ -186,16 +188,18 @@
                     <a href="https://ahmed001abdullah.github.io/Movie-app/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
-            <!-- <div class="portfolio-box">
-                <img src="imgs/profile.jpg" alt="">
+             <div class="portfolio-box">
+                <img src="imgs/Final year project.jpeg" alt="">
 
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <h4>Final Year Project</h4>
+                    <p>Developed a Human Following Car in my Final Year project of my studies.
+                        This car is programmed on Arduino. 
+                    </p>
+                    <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
                 </div>
             </div>
-            <div class="portfolio-box">
+            <!--<div class="portfolio-box">
                 <img src="imgs/profile.jpg" alt="">
 
                 <div class="portfolio-layer">
